added Login page. Default login page is login

--- a/views/adminLayout.jade
+++ b/views/adminLayout.jade
@@ -1,6 +1,14 @@
 // base screen view for admin views
 extends layout
 
+// Login info
+block loginInfo
+    table
+        tr
+            td: label Date:
+        tr
+            td: label Logged in as: #{username}
+
 // Navigation bar
 block navBar
     table
