--- a/views/logIn.jade
+++ b/views/logIn.jade
@@ -20,3 +20,5 @@ block content
             tr
                 td: label password:
                 td: input(type=text, size=50)
+            tr
+                td: button#loginButton(type='button' width='100px') Log-In
