--- a/views/booksByTitle.jade
+++ b/views/booksByTitle.jade
@@ -25,7 +25,7 @@ block content
     select
     button(type='button') Download List
     #table-div
-        //!{table}
+        - if (bookArray) {
         table
             tr
                 th ISBN
@@ -35,12 +35,15 @@ block content
                 th Available
             // Generate the rows for the books
             - for (var i in bookArray) {
-            tr
-                td #{bookArray[i].isbn}
-                td #{bookArray[i].title}
-                td #{bookArray[i].author}
-                td #{bookArray[i].total}
-                td #{bookArray[i].available}
+                tr
+                    td #{bookArray[i].isbn}
+                    td #{bookArray[i].title}
+                    td #{bookArray[i].author}
+                    td #{bookArray[i].total}
+                    td #{bookArray[i].available}
             - }
+        -} else {
+            p Unable to connect to Database
+        -}
 
 
