Added command buttons for each rows. TODO: create the edit book entry screen as well as the add new book screen.

--- a/views/adminLayout.jade
+++ b/views/adminLayout.jade
@@ -17,7 +17,7 @@ block navBar
         tr
             td: a View Books by Book No.
         tr
-            td: a Add New Book
+            td: a(href='http://localhost:3000/addNewBook') Add New Book
         tr
             td: a Borrow Book
         tr
@@ -27,4 +27,4 @@ block navBar
         tr
             td: a Add New Employee
         tr
-            td: a Log Out
+            td: a(href='http://localhost:3000/login') Log Out
