--- a/views/editBook.jade
+++ b/views/editBook.jade
@@ -6,21 +6,21 @@ block content
     table
         tr
             td ISBN/Book Number:
-            td: input#isbnInput #{bookNumber}
+            td: input#isbnInput(type='text',value='123123123', disabled='true')
         tr
             td Title:
-            td: input#titleInput #{title}
+            td: input#titleInput(type='text',value='Javascript')
         tr
             td Author/s:
-            td: input#authorInput #{author}
+            td: input#authorInput(type='text',value='Me')
         tr
             td Publisher/s:
-            td: input#publisherInput #{publisher}
+            td: input#publisherInput(type='text',value='you')
         tr
             td Date Published:
-            td: input#publishDateInput #{publishDate}
+            td: input#publishDateInput(type='text',value='me')
         tr
             td Quantity:
-            td: input#quantityInput #{quantity}
+            td: input#quantityInput(type='text',value='you', disabled='true')
         tr
             td: button#saveChanges Save
